lib/doc/cookbook/plugins/play_video/cookbook__plugins__play_video.error.txt
D:\app\flutter\.pub-cache\hosted\pub.dartlang.org\video_player-0.10.8+1\android\src\main\java\io\flutter\plugins\videoplayer\VideoPlayerPlugin.java:35: error: cannot find symbol
            registrar::lookupKeyForAsset,
            ^
  symbol:   method metafactory(Lookup,String,MethodType,MethodType,MethodHandle,MethodType)
  location: interface LambdaMetafactory
Fatal Error: Unable to find method metafactory

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':video_player:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 17s
Finished with error: Gradle task assembleDebug failed with exit code 1